(lang dune 3.16)

(name puzzle)

(generate_opam_files true)

(source
 (github mtelvers/puzzle))

(authors "Mark Elvers")

(maintainers "Mark Elvers")

(license MIT)

(documentation https://url/to/documentation)

(package
 (name puzzle)
 (synopsis "A-Puzzle-a-day Solver")
 (description "Solver for DragonFjord's A-Puzzle-A-Day")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
